--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
                  <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
              </form><!-- /form -->
+             <p>&nbsp;</p>
              <a href="#" class="sing-up" >
                  Don't have account? Sing up
              </a>
