--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    * Card component
    */
   .card {
-      background-color: #F7F7F7;
+      background-color: #62BFD7;
       /* just in case there no content*/
       padding: 20px 25px 30px;
       margin: 0 auto 25px;
