--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
   body, html {
       height: 100%;
       background-repeat: no-repeat;
-      background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
+      background-image: linear-gradient(rgb(98, 191, 215), rgb(9, 65, 79));
   }
 
   .card-container.card {
@@ -53,28 +52,6 @@
   /*
    * Form styles
    */
-  .profile-name-card {
-      font-size: 16px;
-      font-weight: bold;
-      text-align: center;
-      margin: 10px 0 0;
-      min-height: 1em;
-  }
-
-  .reauth-email {
-      display: block;
-      color: #404040;
-      line-height: 2;
-      margin-bottom: 10px;
-      font-size: 14px;
-      text-align: center;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      -moz-box-sizing: border-box;
-      -webkit-box-sizing: border-box;
-      box-sizing: border-box;
-  }
 
   .form-signin #inputEmail,
   .form-signin #inputPassword {
@@ -106,7 +83,7 @@
 
   .btn.btn-signin {
       /*background-color: #4d90fe; */
-      background-color: rgb(104, 145, 162);
+      background-color: rgb(156, 196, 207);
       /* background-color: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));*/
       padding: 0px;
       font-weight: 700;
@@ -125,38 +102,33 @@
   .btn.btn-signin:hover,
   .btn.btn-signin:active,
   .btn.btn-signin:focus {
-      background-color: rgb(12, 97, 33);
+      background-color: rgb(9, 65, 79);
   }
 
-  .forgot-password {
-      color: rgb(104, 145, 162);
+  .sing-up {
+      color: rgb(9, 65, 79);
   }
 
-  .forgot-password:hover,
-  .forgot-password:active,
-  .forgot-password:focus{
-      color: rgb(12, 97, 33);
+  .sing-up:hover,
+  .sing-up:active,
+  .sing-up:focus{
+      color: rgb(156, 196, 207);
   }
   </style>
-      <div class="container">
-          <div class="card card-container">
-              <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
-              <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
-              <p id="profile-name" class="profile-name-card"></p>
-              <form class="form-signin">
-                  <span id="reauth-email" class="reauth-email"></span>
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                  <div id="remember" class="checkbox">
-                      <label>
-                          <input type="checkbox" value="remember-me"> Remember me
-                      </label>
-                  </div>
-                  <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
-              </form><!-- /form -->
-              <a href="#" class="forgot-password">
-                  Forgot the password?
-              </a>
-          </div><!-- /card-container -->
-      </div><!-- /container -->
-</html>
+
+  <div class="container">
+         <div class="card card-container">
+             <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
+             <img id="profile-img" class="profile-img-card" src="http://seeklogo.com/images/C/centro-medico-puerta-de-hierro-logo-987792D919-seeklogo.com.png" />
+             <form class="form-signin">
+                 <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                 <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
+             </form><!-- /form -->
+             <p>&nbsp;</p>
+             <a href="#" class="sing-up" >
+                 Don't have account? Sing up
+             </a>
+         </div><!-- /card-container -->
+     </div><!-- /container -->
+   </html>
