--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <style>
   body, html {
       height: 100%;
+      width: 100%
       background-repeat: no-repeat;
       background-image: linear-gradient(rgb(98, 191, 215), rgb(9, 65, 79));
   }
