--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <div class="container">
+  <div class="container" align="center">
       <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-6">
               <div class="well well-sm">
