--- a/index.html
+++ b/index.html
@@ -13,7 +13,40 @@
   small {
     display: block;
     line-height: 1.428571429;
-    color: #999;
+  }
+
+  .container {
+    background-color: #9CC4CF;
+    max-width: 350px;
+    padding: 40px 40px;
+    margin: auto;
+  }
+
+  .btn {
+      font-weight: 700;
+      height: 36px;
+      -moz-user-select: none;
+      -webkit-user-select: none;
+      user-select: none;
+      cursor: default;
+  }
+
+  .btn.btn-medicalrecord {
+      /*background-color: #4d90fe; */
+      background-color: rgb(118, 148, 156);
+      /* background-color: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));*/
+      padding: 0px;
+      font-weight: 700;
+      font-size: 14px;
+      height: 36px;
+      -moz-border-radius: 3px;
+      -webkit-border-radius: 3px;
+      border-radius: 3px;
+      border: none;
+      -o-transition: all 0.218s;
+      -moz-transition: all 0.218s;
+      -webkit-transition: all 0.218s;
+      transition: all 0.218s;
   }
   </style>
 
@@ -31,14 +64,14 @@
                           <small><cite title="San Francisco, USA">San Francisco, USA <i class="glyphicon glyphicon-map-marker">
                           </i></cite></small>
                           <p>
-                              <i class="glyphicon glyphicon-envelope"></i>Dalenna@gmail.com
+                              <i class="glyphicon glyphicon-envelope"></i>Mail: Dalenna@gmail.com
                               <br />
-                              <i class="glyphicon glyphicon-gift"></i>+1-202-555-0197
+                              <i class="glyphicon glyphicon-gift"></i>Phone: +1-202-555-0197
                               <br />
-                              <i class="glyphicon glyphicon-gift"></i>#1095, Broaddus Avenue
+                              <i class="glyphicon glyphicon-gift"></i>Adress: #1095, Broaddus Avenue
                           </p>
                           <!-- Split button -->
-                              <button type="button" class="btn btn-primary">
+                              <button type="button" class="btn btn-primary btn-medicalrecord">
                                   Medical record</button>
                       </div>
                   </div>
