--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   }
 
   .container {
-    background-color: #9CC4CF;
+    background-image: url(https://cdn.pixabay.com/photo/2016/10/22/17/06/gradient-1761190_960_720.jpg);
     max-width: 350px;
     padding: 20px;
     margin: auto;
@@ -96,4 +96,3 @@
       </div>
   </div>
 </html>
-
