--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   }
 
   .container {
-    background-image: url(https://cdn.pixabay.com/photo/2016/10/22/17/06/gradient-1761190_960_720.jpg);
+    background-color: #9CC4CF;
     max-width: 350px;
     padding: 20px;
     margin: auto;
